fix(ui): heading image overflow for the breadcrumb items

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -99,6 +99,13 @@
   }
 }
 
+.breadcrumb {
+  .asset-container img {
+    height: 18px;
+  }
+}
+
+
 .open-block-ref-link {
   background-color: var(--ls-page-properties-background-color);
   padding: 1px 4px;
